# llm-watch

./: .gitignore  CHANGELOG.md  README.md  llmwatch.json.example  llmwatch.yaml.example  pyproject.toml
docs/: CONSOLIDATION_AGENT_INVESTIGATION.md  CONSOLIDATION_QUICK_REFERENCE.md  EDITOR_QUICK_REFERENCE.md  PHASE_1_MVP_IMPLEMENTATION.md
llmwatch/: __init__.py  cache.py  config.py  main.py  ollama_client.py  orchestrator.py
llmwatch/agents/: __init__.py  base.py  consolidator.py  editor.py  read_tracker.py  reporter.py
llmwatch/agents/lookup/: __init__.py  arxiv.py
llmwatch/agents/watchers/: __init__.py  huggingface.py  huggingface_papers.py  lastweekinai_podcast.py  neuron_feed.py  ollama.py  tldr_ai.py  vendor_blogs.py  vendor_scrape.py
tests/: __init__.py  test_base.py  test_consolidator.py  test_editor.py  test_huggingface_papers.py  test_lastweekinai_podcast.py  test_lookup.py  test_main.py  test_neuron_feed.py  test_orchestrator.py  test_read_tracker.py  test_reporter.py  test_vendor_blogs.py  test_vendor_scrape.py  test_vendor_scrape_fixtures.py  test_watchers.py
tests/fixtures/vendor_scrape/: anthropic_listing.html  meta_listing.html  meta_mixed_anchors.html  mistral_listing.html  xai_listing.html
